--- a/src/app/feature/request/request-list/request-list.component.html
+++ b/src/app/feature/request/request-list/request-list.component.html
@@ -46,8 +46,8 @@
         <a routerLink="/requests/edit/{{ r.id }}"
           ><img src="assets/pencil-icon.png" width="20" height="20" title="Edit"
         /></a> |
-        <a routerLink="/line-items/lines-for-pr{{ r.id }}"
-          ><img src="assets/lines-icon.png" width="20" height="20" title="Edit"
+        <a routerLink="/requests/lines/{{ r.id }}"
+          ><img src="assets/lines.png" width="20" height="20" title="Line Items"
         /></a>
       </td>
     </tr>
