--- a/src/app/feature/user/user-create/user-create.component.html
+++ b/src/app/feature/user/user-create/user-create.component.html
@@ -60,7 +60,7 @@
               isReviewer:
             </td>
             <td>
-              <input [(ngModel)]="user.isReviewer" class="rounded" type="text" />
+              <input [(ngModel)]="user.reviewer" class="rounded" type="text" />
             </td>
           </tr>
           <tr>
@@ -68,7 +68,7 @@
               isAdmin:
             </td>
             <td>
-              <input [(ngModel)]="user.isAdmin" class="rounded" type="text" />
+              <input [(ngModel)]="user.admin" class="rounded" type="text" />
             </td>
           </tr>
       </table>
