--- a/src/app/feature/user/user-detail/user-detail.component.html
+++ b/src/app/feature/user/user-detail/user-detail.component.html
@@ -58,7 +58,7 @@
                   isReviewer:
                 </td>
                 <td>
-                  <input [(ngModel)]="user.isReviewer" class="rounded" type="text" disabled/>
+                  <input [(ngModel)]="user.reviewer" class="rounded" type="text" disabled/>
                 </td>
               </tr>
               <tr>
@@ -66,7 +66,7 @@
                   isAdmin:
                 </td>
                 <td>
-                  <input [(ngModel)]="user.isAdmin" class="rounded" type="text" disabled/>
+                  <input [(ngModel)]="user.admin" class="rounded" type="text" disabled/>
                 </td>
               </tr>
           </table>
