--- a/src/app/feature/request/request-lines/request-lines.component.html
+++ b/src/app/feature/request/request-lines/request-lines.component.html
@@ -1,1 +1,59 @@
-<p>request-lines works!</p>
+<div class="component-content">
+    <div class="lefthalf">
+      <span class="component-title">{{ title }}</span>
+      <span
+        ><a routerLink="/requests/create">
+          <img
+            id="createnew"
+            width="20"
+            height="20"
+            src="assets/add-icon.png"
+            title="Add New"
+        /></a>
+      </span>
+    </div>
+  </div>
+  <p *ngIf="!requests">Loading...</p>
+  <table *ngIf='requests' class="table">
+    <tr>
+      <th><a (click)="sortBy('id')">ID</a></th>
+      <th><a (click)="sortBy('date')">User</a></th>
+      <th><a (click)="sortBy('description')">Description</a></th>
+      <th><a (click)="sortBy('status')">Status</a></th>
+      <th><a (click)="sortBy('total')">Total</a></th>
+    </tr>
+    <tr *ngFor="let r of requests | sort: sortCriteria:sortOrder">
+      <td>{{ r.id }}</td>
+      <td>{{ r.user.userName }}</td>
+      <td>{{ r.description }}</td>
+      <td>{{ r.status }}</td>
+      <td>{{ r.total }}</td>
+    </tr>
+  </table>
+  <table *ngIf='lineitems' class="table">
+    <tr>
+      <th><a (click)="sortBy('product')">Product</a></th>
+      <th><a (click)="sortBy('quantity')">Quantity</a></th>
+      <th><a (click)="sortBy('subtotal')">Subtotal</a></th>
+      <th>Action</th>
+    </tr>
+    <tr *ngFor="let l of lineitems | sort: sortCriteria:sortOrder">
+      <td>{{ r.id }}</td>
+      <td>{{ r.user.userName }}</td>
+      <td>{{ r.description }}</td>
+      <td>{{ r.status }}</td>
+      <td>{{ r.total }}</td>
+      <td>
+        <a routerLink="/requests/detail/{{ r.id }}"
+          ><img src="assets/details.png" width="20" height="20" title="Detail"
+        /></a> |
+        <a routerLink="/requests/edit/{{ r.id }}"
+          ><img src="assets/pencil-icon.png" width="20" height="20" title="Edit"
+        /></a> |
+        <a routerLink="/requests/lines/{{ r.id }}"
+          ><img src="assets/lines.png" width="20" height="20" title="Line Items"
+        /></a>
+      </td>
+    </tr>
+  </table>
+  
