--- a/src/app/feature/line-item/line-item-create/line-item-create.component.html
+++ b/src/app/feature/line-item/line-item-create/line-item-create.component.html
@@ -1,1 +1,36 @@
-<p>line-item-create works!</p>
+<div class="component-content">
+    <div class="lefthalf">
+      <span class="component-title">{{ title }}</span>
+    </div>
+  </div>
+  <p *ngIf="!lineitem">Loading...</p>
+  <div *ngIf="lineitem">
+    <main class="single">
+      <table class="table table-sm">
+        <tr>
+          <td>
+            Product:
+          </td>
+          <td>
+            <select [(ngModel)]="lineitem.product" class="rounded">
+              <option *ngFor="let p of products" [ngValue]="p">{{
+                p.name }} | {{ p.vendor.name
+              }}</option>
+            </select>
+          </td>
+        </tr>
+        <tr>
+            <td>
+              Quantity:
+            </td>
+            <td>
+              <input [(ngModel)]="lineitem.quantity" class="rounded" type="number" min="0">
+            </td>
+          </tr>
+      </table>
+    </main>
+    <span
+      ><button (click)="save()" class="btn btn-sm btn-primary">Create</button></span
+    >
+  </div>
+  
