--- a/src/app/feature/line-item/line-item-create/line-item-create.component.html
+++ b/src/app/feature/line-item/line-item-create/line-item-create.component.html
@@ -1,18 +1,19 @@
+<app-menu></app-menu>
 <div class="component-content">
     <div class="lefthalf">
-      <span class="component-title">{{ title }}</span>
+      <span class="component-title">{{ title }}  - Request ID: {{id}} </span>
     </div>
   </div>
-  <p *ngIf="!lineitem">Loading...</p>
-  <div *ngIf="lineitem">
+  <p *ngIf="!lineItem">Loading...</p>
+  <div *ngIf="lineItem">
     <main class="single">
       <table class="table table-sm">
-        <tr>
+         <tr>
           <td>
             Product:
           </td>
           <td>
-            <select [(ngModel)]="lineitem.product" class="rounded">
+            <select [(ngModel)]="lineItem.product" class="rounded">
               <option *ngFor="let p of products" [ngValue]="p">{{
                 p.name }} | {{ p.vendor.name
               }}</option>
@@ -24,7 +25,7 @@
               Quantity:
             </td>
             <td>
-              <input [(ngModel)]="lineitem.quantity" class="rounded" type="number" min="0">
+              <input [(ngModel)]="lineItem.quantity" class="rounded" type="number" min="0">
             </td>
           </tr>
       </table>
