--- a/src/app/feature/request/request-lines/request-lines.component.html
+++ b/src/app/feature/request/request-lines/request-lines.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <div class="component-content">
   <div class="lefthalf">
     <span class="component-title">{{ title }}</span>
@@ -6,25 +7,28 @@
 </div>
 <p *ngIf="!request">Loading...</p>
 <table *ngIf="request" class="table">
-  <tr>
-    <th>ID</th>
-    <th>Description</th>
-    <th>Status</th>
-    <th>Total</th>
-  </tr>
-  <tr>
-    <td>{{ request.id }}</td>
-    <td>{{ request.description }}</td>
-    <td>{{ request.status }}</td>
-    <td>{{ request.total }}</td>
-  </tr>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Description</th>
+      <th>Status</th>
+      <th>Total</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>{{ request.id }}</td>
+      <td>{{ request.description }}</td>
+      <td>{{ request.status }}</td>
+      <td>{{ request.total }}</td>
+    </tr>
+  </tbody>
 </table>
-
-<div class="add">
+<div class="component-content">
   <div class="lefthalf">
     <span class="component-title">{{ title2 }}</span>
     <span
-      ><a routerLink="/line-items/create/{{ request.id }}">
+      ><a routerLink="/line-items/create/{{request.id}}">
         <img
           id="createnew"
           width="20"
@@ -35,50 +39,48 @@
     </span>
   </div>
 </div>
-<!-- <div *ngIf="lineitems.length == 0" class="nolines">
-  No line items yet. Click above to create a new line item for this request.
-</div> -->
-<table *ngIf='lineItems' class="table table-striped">
+<p *ngIf="!lineItems">Loading...</p>
+<table *ngIf="lineItems" class="table">
   <thead>
-      <tr>
-          <th>Id:</th>
-          <th>Product:</th>
-          <th>Quantity:</th>
-          <th>Price:</th>
-          <th>Line Total:</th>
-          <th>Action:</th>
-      </tr>
+    <tr>
+      <th>Id:</th>
+      <th>Product:</th>
+      <th>Quantity:</th>
+      <th>Price:</th>
+      <th>Line Total:</th>
+      <th>Action:</th>
+    </tr>
   </thead>
   <tbody>
-      <tr *ngFor="let l of lineItems">
-          <td>{{l.id}}</td>
-          <td>{{l.product.name}}</td>
-          <td>{{l.quantity}}</td>
-          <td>{{l.product.price | currency}}</td>
-          <td>{{l.quantity * l.product.price | currency}}</td>
-          <td>
-            <a routerLink="/line-items/edit/{{ l.id }}"
-              ><img
-                class="default"
-                src="assets/pencil-icon.png"
-                width="20"
-                height="20"/>
-              <img
-                class="hover"
-                src="assets/pencil-icon-hover.png"
-                width="20"
-                height="20"
-            /></a>
-            |
-            <a (click)="delete(l.id)" onclick="location.reload(true)"
-              ><img class="default" src="assets/delete.png" width="20" height="20"/>
-              <img
-                class="hover"
-                src="assets/delete-hover.png"
-                width="20"
-                height="20"
-            /></a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <tr *ngFor="let l of lineItems">
+      <td>{{ l.id }}</td>
+      <td>{{ l.product.name }}</td>
+      <td>{{ l.quantity }}</td>
+      <td>{{ l.product.price | currency }}</td>
+      <td>{{ l.quantity * l.product.price | currency }}</td>
+      <td>
+        <a routerLink="/line-items/edit/{{ l.id }}"
+          ><img
+            class="default"
+            src="assets/pencil-icon.png"
+            width="20"
+            height="20"
+          />
+        </a>
+        |
+        <a (click)="delete(l.id)"
+          ><img
+            class="default"
+            src="assets/delete.jpg"
+            width="20"
+            height="20"
+          />
+        </a>
+      </td>
+    </tr>
+  </tbody>
+  <span><button (click)="submitForReview()" class="btn btn-sm btn-primary">Submit for Review</button></span>
+</table>
+<!-- <div *ngIf="lineitems.length == 0" class="nolines">
+    No line items yet. Click above to create a new line item for this request.
+  </div> -->
