--- a/src/app/feature/line-item/line-item-create/line-item-create.component.html
+++ b/src/app/feature/line-item/line-item-create/line-item-create.component.html
@@ -1,37 +1,43 @@
 <app-menu></app-menu>
 <div class="component-content">
-    <div class="lefthalf">
-      <span class="component-title">{{ title }}  - Request ID: {{id}} </span>
-    </div>
+  <div class="lefthalf">
+    <span class="component-title">{{ title }} - Request ID: {{ id }} </span>
   </div>
-  <p *ngIf="!lineItem">Loading...</p>
-  <div *ngIf="lineItem">
-    <main class="single">
-      <table class="table table-sm">
-         <tr>
-          <td>
-            Product:
-          </td>
-          <td>
-            <select [(ngModel)]="lineItem.product" class="rounded">
-              <option *ngFor="let p of products" [ngValue]="p">{{
-                p.name }} | {{ p.vendor.name
-              }}</option>
-            </select>
-          </td>
-        </tr>
-        <tr>
-            <td>
-              Quantity:
-            </td>
-            <td>
-              <input [(ngModel)]="lineItem.quantity" class="rounded" type="number" min="0">
-            </td>
-          </tr>
-      </table>
-    </main>
-    <span
-      ><button (click)="save()" class="btn btn-sm btn-primary">Create</button></span
-    >
-  </div>
-  
+</div>
+<p *ngIf="!lineItem">Loading...</p>
+<div *ngIf="lineItem">
+  <main class="single">
+    <table class="table table-sm">
+      <tr>
+        <td>
+          Product:
+        </td>
+        <td>
+          <select [(ngModel)]="lineItem.product" class="rounded">
+            <option *ngFor="let p of products" [ngValue]="p"
+              >{{ p.name }} | {{ p.vendor.name }}</option
+            >
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Quantity:
+        </td>
+        <td>
+          <input
+            [(ngModel)]="lineItem.quantity"
+            class="rounded"
+            type="number"
+            min="0"
+          />
+        </td>
+      </tr>
+    </table>
+  </main>
+  <span
+    ><button (click)="save()" class="btn btn-sm btn-primary">
+      Create
+    </button></span
+  >
+</div>
