--- a/src/app/feature/request/request-list/request-list.component.html
+++ b/src/app/feature/request/request-list/request-list.component.html
@@ -1,56 +1,69 @@
 <app-menu></app-menu>
 <div class="component-content">
-    <div class="lefthalf">
-      <span class="component-title">{{ title }}</span>
-      <span
-        ><a routerLink="/requests/create">
-          <img
-            id="createnew"
-            width="20"
-            height="20"
-            src="assets/add-icon.png"
-            title="Add New"
-        /></a>
-      </span>
-    </div>
+  <div class="lefthalf">
+    <span class="component-title">{{ title }}</span>
+    <span
+      ><a *ngIf="loggedInUser.admin!=false" routerLink="/requests/create">
+        <img
+          id="createnew"
+          width="20"
+          height="20"
+          src="assets/add-icon.png"
+          title="Add New"
+      /></a>
+    </span>
   </div>
-  <p *ngIf="!requests">Loading...</p>
-  <table *ngIf='requests' class="table">
-    <tr>
-      <th><a (click)="sortBy('id')">ID</a></th>
-      <th><a (click)="sortBy('user')">User</a></th>
-      <th><a (click)="sortBy('description')">Description</a></th>
-      <th><a (click)="sortBy('justification')">Justification</a></th>
-      <th><a (click)="sortBy('dateNeeded')">DateNeeded</a></th>
-      <th><a (click)="sortBy('deliveryMode')">DeliveryMode</a></th>
-      <th><a (click)="sortBy('status')">Status</a></th>
-      <th><a (click)="sortBy('total')">Total</a></th>
-      <th><a (click)="sortBy('date')">Date</a></th>
-      <th><a (click)="sortBy('reasonForRejection')"></a>ReasonForRejection</th>
-      <th>Action</th>
-    </tr>
-    <tr *ngFor="let r of requests | sort: sortCriteria:sortOrder">
-      <td>{{ r.id }}</td>
-      <td>{{ r.user.userName }}</td>
-      <td>{{ r.description }}</td>
-      <td>{{ r.justification }}</td>
-      <td>{{ r.dateNeeded }}</td>
-      <td>{{ r.deliveryMode }}</td>
-      <td>{{ r.status }}</td>
-      <td>{{ r.total }}</td>
-      <td>{{ r.submittedDate }}</td>
-      <td>{{ r.reasonForRejection }}</td>
-      <td>
-        <a routerLink="/requests/detail/{{ r.id }}"
-          ><img src="assets/details.png" width="20" height="20" title="Detail"
-        /></a> |
-        <a routerLink="/requests/edit/{{ r.id }}"
-          ><img src="assets/pencil-icon.png" width="20" height="20" title="Edit"
-        /></a> |
-        <a routerLink="/requests/lines/{{ r.id }}"
-          ><img src="assets/lines.png" width="20" height="20" title="Line Items"
-        /></a>
-      </td>
-    </tr>
-  </table>
-  
+</div>
+<p *ngIf="!requests">Loading...</p>
+<table *ngIf="requests" class="table">
+  <tr>
+    <th><a (click)="sortBy('id')">ID</a></th>
+    <th><a (click)="sortBy('user')">User</a></th>
+    <th><a (click)="sortBy('description')">Description</a></th>
+    <th><a (click)="sortBy('justification')">Justification</a></th>
+    <th><a (click)="sortBy('dateNeeded')">DateNeeded</a></th>
+    <th><a (click)="sortBy('deliveryMode')">DeliveryMode</a></th>
+    <th><a (click)="sortBy('status')">Status</a></th>
+    <th><a (click)="sortBy('total')">Total</a></th>
+    <th><a (click)="sortBy('date')">Date</a></th>
+    <th><a (click)="sortBy('reasonForRejection')"></a>ReasonForRejection</th>
+    <th>Action</th>
+  </tr>
+  <tr *ngFor="let r of requests | sort: sortCriteria:sortOrder">
+    <td>{{ r.id }}</td>
+    <td>{{ r.user.userName }}</td>
+    <td>{{ r.description }}</td>
+    <td>{{ r.justification }}</td>
+    <td>{{ r.dateNeeded }}</td>
+    <td>{{ r.deliveryMode }}</td>
+    <td>{{ r.status }}</td>
+    <td>{{ r.total }}</td>
+    <td>{{ r.submittedDate }}</td>
+    <td>{{ r.reasonForRejection }}</td>
+    <td>
+      <a routerLink="/requests/detail/{{ r.id }}"
+        ><img src="assets/details.png" width="20" height="20" title="Detail"
+      /></a>
+      |
+      <a routerLink="/requests/edit/{{ r.id }}"
+        ><img
+          src="assets/pencil-icon.png"
+          width="20"
+          height="20"
+          title="Edit"
+          *ngIf="isAdmin || loggedInUser.id == r.user.id"
+        />
+      </a>
+      |
+      <a routerLink="/requests/lines/{{ r.id }}">
+        <img
+          src="assets/lines.png"
+          width="20"
+          height="20"
+          title="Line Items"
+          *ngIf="isAdmin || loggedInUser.id == r.user.id"
+        />
+      </a>
+    </td>
+  </tr>
+</table>
